overflow fix

--- a/bitcasino/css/style.css
+++ b/bitcasino/css/style.css
@@ -1,6 +1,8 @@
-body {
+body, html {
 	font-family: Lato;
 	font-size: 16px;
+	width: 100%;
+	height: 100%;
 	position: relative;
 	overflow-x: hidden;
 }
